<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding1"
    android:background="@drawable/background_app">
    <TextView
        android:id="@+id/fromlogin_goback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="@dimen/title_h3"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_login"
        android:textSize="@dimen/title_h1"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_user"
        android:textSize="@dimen/title_h2"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_pass"
        android:textSize="@dimen/title_h2"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:textSize="@dimen/title_h2"
        android:padding="@dimen/padding2"
        tools:ignore="VisualLintButtonSize"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/fromlogin_toregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_register"
        android:textSize="@dimen/title_h3"
        android:textColor="@color/black"/>
</LinearLayout>