<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding1"
    android:background="@drawable/background_app">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/greetings"
        android:textAlignment="center"
        android:textSize="@dimen/title_h1"
        android:textColor="@color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:src="@drawable/gifts" />

    <Button
        android:id="@+id/goto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="@dimen/sizebutton_login"
        android:text="@string/button_login"/>
    <Button
        android:id="@+id/goto_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="@dimen/sizebutton_register"
        android:text="@string/button_register"/>
</LinearLayout>